--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@pinia/nuxt": "^0.11.3",
     "nuxt": "^4.3.1",
     "vue": "^3.5.28",
-    "vue-router": "^4.6.4"
+    "vue-router": "^4.6.4",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@iconify-json/heroicons": "^1.2.3"
