--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@nuxt/ui": "^4.4.0",
     "@pinia/nuxt": "^0.11.3",
     "nuxt": "^4.3.1",
+    "resend": "^6.9.2",
     "vue": "^3.5.28",
     "vue-router": "^4.6.4",
     "zod": "^4.3.6"
   },
   "devDependencies": {
-    "@iconify-json/heroicons": "^1.2.3"
+    "@iconify-json/heroicons": "^1.2.3",
+    "@types/node": "^25.3.0"
   }
 }
